--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Din øyelege i Haugesund og omegn.">
         <meta property="og:title" content="Haugesund Øyelegesenter">
         <meta property="og:description" content="Din øyelege i Haugesund og omegn.">
-        <meta property="og:image" content="assets/screenshots/demo_screenshot.png">
+        <meta property="og:image" content="assets/images/demo_screenshot.png">
         <meta property="og:url" content="https://haugesundos.netlify.app/">
         <meta name="twitter:card" content="summary">
         <link rel="stylesheet" href="style.css">
@@ -27,7 +27,7 @@
                 <nav class="navbar padding-top-small padding-bottom-small">
                     <div class="nav-top-row">
                         <a class="logo" href="#main-div" title="Gå til starten">
-                            <img class="margin-right-small" src="assets/vector_graphics/logo_four.svg" alt="Haugesund Øyelegesenter logo">
+                            <img class="margin-right-small content-auto" width="60" height="73" src="assets/vector_graphics/logo.svg" alt="Haugesund Øyelegesenter logo" loading="lazy" decoding="async">
                             Haugesund<br>Øyelegesenter
                         </a>
                         <svg class="menu-icon" onclick="toggleMobileMenu()" width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +78,7 @@
                         <h2 class="section-subheading title-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
                         <a class="contact-button" href="#contact-page" title="Kontakt Haugesund Øyelegesenter">Kontakt oss</a>
                     </div>
-                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_nine.svg" alt="Landing page graphic">
+                    <img class="landing-graphic content-auto blurry-placeholder blurry-placeholder-landing" width="1423" height="1010" src="assets/vector_graphics/landing_graphic.svg" alt="Landing page graphic" loading="lazy" decoding="async">
                 </div>
             </div>
             <div id="about-page" class="full-page-background about-background-color margin-bottom-about-page padding-top-very-large">
@@ -91,21 +91,21 @@
                     <div class="about-cards-wrapper">
                         <div class="about-card">
                             <span class="card-accent"></span>
-                            <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png" alt="Friendly doctor talking with a patient">
+                            <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium content-auto blurry-placeholder blurry-placeholder-color" width="1457" height="992" src="assets/vector_graphics/friendly.svg" alt="Friendly doctor talking with a patient" loading="lazy" decoding="async">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet.</p>
                         </div>
                         <div class="about-card">
                             <span class="card-accent"></span>
-                            <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png" alt="Doctor consulting with a patient and its parent">
+                            <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium content-auto blurry-placeholder blurry-placeholder-color" width="1457" height="993" src="assets/vector_graphics/safety.svg" alt="Doctor consulting with a patient and its parent" loading="lazy" decoding="async">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Trygghet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
                         </div>
                         <div class="about-card">
                             <span class="card-accent"></span>
-                            <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png" alt="Two doctors analyzing the human body on a blackboard">
+                            <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium content-auto blurry-placeholder blurry-placeholder-color" width="1457" height="992" src="assets/vector_graphics/skill.svg" alt="Two doctors analyzing the human body on a blackboard" loading="lazy" decoding="async">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Kompetanse</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Våre ansatte er opptatt av å levere et høyt nivå av kompetanse for deg som pasient. Vi har drevet klinikk i Haugesund siden 2013, og har i løpet av årene perfeksjonert behandlingsmetodene våre.</p>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="right-side">
                             <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
-                                <img class="img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
+                                <img class="img-card normal-image content-auto blurry-placeholder blurry-placeholder-image-map" width="626" height="675" src="assets/images/gmaps.png" alt="Veibeskrivelse" loading="lazy" decoding="async">
                             </a>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                         </p>
                     </div>
                     <div class="right-side">
-                        <img class="normal-image" src="assets/screenshots/contact_alt.png" alt="Contact page graphic">
+                        <img class="normal-image content-auto border-radius blurry-placeholder blurry-placeholder-image-contact" width="855" height="1225" src="assets/images/contact.png" alt="Contact page graphic" loading="lazy" decoding="async">
                     </div>
                 </div>
             </div>
@@ -350,5 +350,21 @@
         </main>
         <div id="top-of-site-pixel-anchor" class="anchor"></div>
         <div id="top-of-site-pixel-anchor-two" class="anchor"></div>
+
+        <script>
+            document.body.addEventListener(
+              "load",
+              (e) => {
+                if (e.target.tagName != "IMG") {
+                  return;
+                }
+                // Remove the blurry placeholder.
+                const classArray = [...e.target.classList];
+                const classToRemove = classArray.filter(ele => ele.includes("blurry-placeholder-"))[0];
+                e.target.classList.remove(classToRemove);
+              },
+              /* capture */ true
+            );
+          </script>
     </body>
 </html>
