--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
         <meta property="og:image" content="assets/images/demo_screenshot.png">
         <meta property="og:url" content="https://haugesundos.netlify.app/">
         <meta name="twitter:card" content="summary">
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-regular.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-italic.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-italic.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-600.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-600.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_sans_pro/source-sans-pro-v14-latin-700.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="assets/fonts/source_serif_pro/source-serif-pro-v10-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_serif_pro/source-serif-pro-v10-latin-700.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="assets/fonts/source_serif_pro/source-serif-pro-v10-latin-900.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/source_serif_pro/source-serif-pro-v10-latin-900.woff" as="font" type="font/woff" crossorigin>
         <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700;900&display=swap" rel="stylesheet"> <!-- Source Serif Pro -->
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> <!-- Source Sans Pro -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io_hos/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io_hos/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io_hos/favicon-16x16.png">
